Unit tests TopicControllerService - other methods, and refactorings